--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Xin Yin"
-description              : "This is Xin's HOMEPAGE. "
+description              : "☀️🌙🌟"
 repository               : "XinYin.github.io"
 google_scholar_stats_use_cdn : true
 
