--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Xin Yin"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Zhejiang University"
-  location         : "Hangzhou, China"
+  location         : "China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=ciFStZ8AAAAJ"
